--- a/src/app/pages/home/home.page.html
+++ b/src/app/pages/home/home.page.html
@@ -1,4 +1,5 @@
 <div #map id="map"></div>
+<panel-treinador></panel-treinador>
 <div class="footer-menu">
     <div class="ui-g">
         <div class="ui-g-6"></div>
