--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -11,3 +11,23 @@ input {
 .ui-button-warning {
     color: white !important;
 }
+
+.no-pm {
+    padding: 0 !important;
+    margin: 0 !important;
+}
+
+.customProgress .ui-progressbar .ui-progressbar-value {
+    background: aqua !important;
+}
+.container {
+    width: 80%;
+    text-align: center;
+    margin: auto;
+}
+
+.scroll .ui-scrollpanel {
+    padding: 0;
+    margin: 0;
+    background: aliceblue;
+}
