--- a/src/app/pages/cadastro-treinador/cadastro-treinador.page.css
+++ b/src/app/pages/cadastro-treinador/cadastro-treinador.page.css
@@ -6,7 +6,7 @@ h3, p  {
 button {
     margin: 10px;
 }
-input {
+input, input::placeholder {
     color: lightseagreen;
     font-weight: bold;
     text-align: center;
