--- a/src/app/pages/cadastro-treinador/cadastro-treinador.page.html
+++ b/src/app/pages/cadastro-treinador/cadastro-treinador.page.html
@@ -7,7 +7,7 @@
         </div>
         <form #fContinuar="ngForm" (ngSubmit)="continuar()" >
             <div>
-                <input placeholder="Nome" />
+                <input placeholder="Nome de Treinador" />
             </div>
             <div>
                 <button pButton class="ui-button-warning ui-button-rounded" label="Continuar"></button>
