--- a/src/app/pages/cadastro-treinador/pokemon-inicial/pokemon-inicial.page.html
+++ b/src/app/pages/cadastro-treinador/pokemon-inicial/pokemon-inicial.page.html
@@ -63,7 +63,7 @@
                 </p-scrollPanel>
             </div>
             <div>
-                <button pButton class="ui-button-warning ui-button-rounded" label="Continuar"></button>
+                <button (click)="continuar()" pButton class="ui-button-warning ui-button-rounded" label="Continuar"></button>
             </div>
         </form>
     </div>
