--- a/src/app/components/panel-treinador/panel-treinador.component.html
+++ b/src/app/components/panel-treinador/panel-treinador.component.html
@@ -4,8 +4,8 @@
             <a><img class="avatar" src="/assets/icon/ash-avatar.png"></a>
         </div>
         <div class="ui-g-8 ">
-            <p class="no-pm name">Haagsma</p>
-            <p class="no-pm level">Level: 1</p>
+            <p class="no-pm name">{{treinador.nick}}</p>
+            <p class="no-pm level">Level: {{treinador.level}}</p>
             <div class="no-pm level exp">
                 <div class="ui-g no-pm">
                     <div class="ui-g-3 no-pm">
