--- a/src/app/pages/login/login.page.html
+++ b/src/app/pages/login/login.page.html
@@ -2,7 +2,7 @@
   <div class="ui-card">
     <form #fLogin="ngForm" (ngSubmit)="login(fLogin)">
       <div>
-        <input class="ui-inputtext" name="email" type="email" placeholder="E-mail" ngModel required />
+        <input class="ui-inputtext" name="email" type="email" placeholder="E-mail" ngModel="h@h.com" required />
       </div>
       <div>
         <input class="ui-inputtext" name="password" type="password" placeholder="Password" ngModel required  />
