--- a/src/app/components/pokeball/pokeball.component.html
+++ b/src/app/components/pokeball/pokeball.component.html
@@ -6,7 +6,7 @@
                     <img class="pokemon-pokedex" src="/assets/pokemons/{{pokemon.pokemon.num}}.png" />
                     <p>{{pokemon.pokemon.name}}</p>
                     <p>Level: {{pokemon.level}}</p>
-                    <p><small>Exp: {{pokemon.exp}}</small></p>
+                    <p><small>Exp: {{(pokemon.exp)}}%</small></p>
                 </div>
             </div>
         </p-tabPanel>
