--- a/src/app/pages/home/home.page.html
+++ b/src/app/pages/home/home.page.html
@@ -22,3 +22,4 @@
 <pokeball-component></pokeball-component>
 <shop-component></shop-component>
 <battle-component></battle-component>
+<p-toast></p-toast>
