--- a/src/app/components/panel-treinador/panel-treinador.component.html
+++ b/src/app/components/panel-treinador/panel-treinador.component.html
@@ -12,7 +12,7 @@
                         Exp:
                     </div>
                     <div class="ui-g-9 bar">
-                        <p-progressBar class="customProgress" [showValue]="false" [style]="styleExpBar" [value]="50"></p-progressBar>
+                        <p-progressBar class="customProgress" [showValue]="false" [style]="styleExpBar" [value]="level()"></p-progressBar>
                     </div>
                 </div>
             </div>
