--- a/src/app/pages/home/home.page.html
+++ b/src/app/pages/home/home.page.html
@@ -1,5 +1,8 @@
 <div #map id="map"></div>
 <panel-treinador></panel-treinador>
+<div *ngIf="!mapaService.inCenter" class="centered">
+    <a class=" item-menu" (click)="mapaService.goCenter()"><i class="pi pi-plus-circle"></i></a>
+</div>
 <div class="footer-menu">
     <div class="ui-g">
         <div class="ui-g-4"></div>
@@ -22,4 +25,5 @@
 <pokeball-component></pokeball-component>
 <shop-component></shop-component>
 <battle-component></battle-component>
-<p-toast></p-toast>
+<p-toast [baseZIndex]="2000"></p-toast>
+<change-power></change-power>
