--- a/src/app/components/battle/battle.component.html
+++ b/src/app/components/battle/battle.component.html
@@ -3,7 +3,7 @@
         <div class="ui-g">
             <div class="ui-g-7 right">
                 <div class="life-panel">
-                    <p>{{oponent?.pokemon?.pokemon?.name || ''}}</p>
+                    <p class="captalize">{{oponent?.pokemon?.pokemon?.name || ''}}</p>
                     <p>Level: {{oponent?.pokemon?.level || ''}}</p>
                     <p>{{oponent?.pokemon?.hp}} / {{oponent?.pokemon?.maxHp}}</p>
                     <p-progressBar class="life-bar" [value]="((100/oponent?.pokemon?.maxHp)*oponent?.pokemon?.hp)"></p-progressBar>
@@ -17,7 +17,7 @@
             </div>
             <div class="ui-g-7 left">
                 <div class="life-panel">
-                    <p>{{challenger?.pokemon?.pokemon?.name || ''}}</p>
+                    <p class="captalize">{{challenger?.pokemon?.pokemon?.name || ''}}</p>
                     <p>Level: {{challenger?.pokemon?.level || ''}}</p>
                     <p>{{challenger?.pokemon?.hp}} / {{challenger?.pokemon?.maxHp}}</p>
                     <p-progressBar class="life-bar" [value]="((100/challenger?.pokemon?.maxHp)*challenger?.pokemon?.hp)"></p-progressBar>
@@ -43,11 +43,11 @@
         </div>
     </div>
 </p-sidebar>
-<p-overlayPanel #attackPanels [style]="{'width': '100%'}" [baseZIndex]="1000" >
+<p-overlayPanel #attackPanels [style]="{'width': '100%'}" [baseZIndex]="900" >
     <div class="ui-g">
         <div *ngIf="challenger?.pokemon?.move1" class="ui-g-6 center">
             <a (click)="attack(challenger?.pokemon?.move1, attackPanels);" pButton class="ui-button-danger ui-button-rounded btnPower">
-                <p>{{challenger?.pokemon?.move1?.name}}</p>
+                <p class="uppercase">{{challenger?.pokemon?.move1?.name}}</p>
                 <small>Power: {{challenger?.pokemon?.move1?.power}}</small><br>
                 <small>Accuracy: {{challenger?.pokemon?.move1?.accuracy}}</small><br>
                 <small>Type: {{challenger?.pokemon?.move1?.type?.name}}</small>
@@ -55,7 +55,7 @@
         </div>
         <div *ngIf="challenger?.pokemon?.move2" class="ui-g-6 center">
             <a  (click)="attack(challenger?.pokemon?.move2, attackPanels);" pButton class="ui-button-danger ui-button-rounded btnPower">
-                <p>{{challenger?.pokemon?.move2?.name}}</p>
+                <p class="uppercase">{{challenger?.pokemon?.move2?.name}}</p>
                 <small>Power: {{challenger?.pokemon?.move2?.power}}</small><br>
                 <small>Accuracy: {{challenger?.pokemon?.move2?.accuracy}}</small><br>
                 <small>Type: {{challenger?.pokemon?.move2?.type?.name}}</small>
@@ -63,7 +63,7 @@
         </div>
         <div *ngIf="challenger?.pokemon?.move3" class="ui-g-6 center">
             <a  (click)="attack(challenger?.pokemon?.move3, attackPanels);"  pButton class="ui-button-danger ui-button-rounded btnPower">
-                <p>{{challenger?.pokemon?.move3?.name}}</p>
+                <p class="uppercase">{{challenger?.pokemon?.move3?.name}}</p>
                 <small>Power: {{challenger?.pokemon?.move3?.power}}</small><br>
                 <small>Accuracy: {{challenger?.pokemon?.move3?.accuracy}}</small><br>
                 <small>Type: {{challenger?.pokemon?.move3?.type?.name}}</small>
@@ -71,7 +71,7 @@
         </div>
         <div *ngIf="challenger?.pokemon?.move4" class="ui-g-6 center">
             <a (click)="attack(challenger?.pokemon?.move4, attackPanels);" pButton class="ui-button-danger ui-button-rounded btnPower">
-                <p>{{challenger?.pokemon?.move4?.name}}</p>
+                <p class="uppercase">{{challenger?.pokemon?.move4?.name}}</p>
                 <small>Power: {{challenger?.pokemon?.move4?.power}}</small><br>
                 <small>Accuracy: {{challenger?.pokemon?.move4?.accuracy}}</small><br>
                 <small>Type: {{challenger?.pokemon?.move4?.type?.name}}</small>
@@ -79,7 +79,7 @@
         </div>
     </div>
 </p-overlayPanel>
-<p-dialog [(visible)]="pokemonPanel" [baseZIndex]="1000">
+<p-dialog [(visible)]="pokemonPanel" [baseZIndex]="900">
     <div class="ui-g">
         <div *ngFor="let p of challenger.team" class="ui-g-4 choose center">
             <a *ngIf="p.hp > 0" (click)="changePokemon(p)">
@@ -88,14 +88,14 @@
             <a *ngIf="p.hp <= 0">
                 <img class="pokemon-pokedex" src="/assets/pokemons/{{p.pokemon.num}}.png" />
             </a>
-            <p>{{p.pokemon.name}}</p>
+            <p class="captalize">{{p.pokemon.name}}</p>
             <small>Level: {{p.level}}</small><br>
             <small *ngIf="p.hp > 0">HP: {{p.hp}}</small>
             <small *ngIf="p.hp <= 0" style="color: red">HP: Defeat</small>
         </div>
     </div>
 </p-dialog>
-<p-dialog [(visible)]="itemsPanel" [baseZIndex]="1000">
+<p-dialog [(visible)]="itemsPanel" [baseZIndex]="900">
     <p-tabView>
         <p-tabPanel header="Pokeballs">
             <div class="ui-g">
@@ -103,7 +103,7 @@
                     <a (click)="catchPokemon(item)">
                         <img class="item-bag" src="/assets/items/{{item.item.nemotecnico}}.png" />
                     </a>
-                    <p>{{item.item.name}}</p>
+                    <p class="captalize">{{item.item.name}}</p>
                     <p>x {{item.amount}}</p>
                 </div>
             </div>
