--- a/src/app/pages/home/home.page.css
+++ b/src/app/pages/home/home.page.css
@@ -2,6 +2,21 @@
     width: 100%;
     height: 100%;
 }
+.centered a {
+    color: black;
+    font-size: 2em;
+}
+.centered {
+    position: absolute;
+    z-index: 5;
+    bottom: 50px;
+    float: left;
+    text-align: center;
+    padding-bottom: 10px;
+    padding-left: 10px;
+    background: rgba(0,0,0,0);
+    border-radius: 50%;
+}
 .footer-menu {
     position: absolute;
     z-index: 5;
